syntax = "proto3";

option csharp_namespace = "StreamDb.Protos";

package comment;

import "google/protobuf/empty.proto";
import "common.proto";

service CommentService {
  rpc CreateComment (CreateCommentRequest) returns (CommentResponse);
  rpc GetComment (GetCommentRequest) returns (CommentResponse);
  rpc UpdateComment (UpdateCommentRequest) returns (CommentResponse);
  rpc DeleteComment (DeleteCommentRequest) returns (google.protobuf.Empty);
  rpc ListComments (ListCommentsRequest) returns (ListCommentsResponse);
}

message CreateCommentRequest {
  string message = 1;
  int32 user_id = 2;
  int32 stream_id = 3;
}

message GetCommentRequest {
  int32 id = 1;
}

message UpdateCommentRequest {
  int32 id = 1;
  string message = 2;
}

message DeleteCommentRequest {
  int32 id = 1;
}

message CommentFilter {
  string message_contains = 1;
  int32 user_id = 2;
  int32 stream_id = 3;
  string created_after = 4;
  string created_before = 5;
}

message ListCommentsRequest {
  int32 page_size = 1;
  int32 page_number = 2;
  CommentFilter filter = 3;
  string sort_by = 4;
  bool ascending = 5;
}

message CommentResponse {
  int32 id = 1;
  string message = 2;
  int32 user_id = 3;
  int32 stream_id = 4;
  string created_at = 5;
}

message ListCommentsResponse {
  repeated CommentResponse comments = 1;
  common.PaginationMetadata meta_data = 2;
}